refactor: changing more obvious cases to use 'var' (test code) (#210)